Fix Bug 381483 Profile migration fails to migrate mail/newsgroups properly. r/sr=Neil